Smoothed plot for problem 2 and fixed mutate of activity data

--- a/p8105_hw3_rsh2155.md
+++ b/p8105_hw3_rsh2155.md
@@ -135,7 +135,8 @@ accel_df =
     names_to = "activity_minute",
     values_to = "activity_count"
     ) %>% 
-  mutate(activity_minute = substr(activity_minute, 10, 12)) %>% 
+  mutate(activity_minute = substr(activity_minute, 10, 13)) %>% 
+  mutate(activity_minute = as.numeric(activity_minute)) %>% 
   mutate(weekday_weekend = recode(day, "Monday" = "weekday", "Tuesday" = "weekday", "Wednesday" = "weekday", "Thursday" = "weekday", "Friday" = "weekday", "Saturday" = "weekend", "Sunday" = "weekend"))
 ```
 
@@ -212,12 +213,33 @@ Single panel plot Show activity - minute on x, activity count on y
 Geom\_line maybe Color of day of week (aes mapping)
 
 ``` r
-accel_df %>% 
-  ggplot(aes(x = activity_minute, y = activity_count, color = day)) +
-  geom_line()
+accel_df %>%
+  group_by(day, activity_minute) %>% 
+  summarize(mean_activities = mean(activity_count)) %>% 
+  ggplot(aes(x = activity_minute, y = mean_activities, color = day)) + 
+  scale_x_continuous(
+    breaks = c(1, 360, 720, 1080, 1440),
+    labels = c("12am", "6am", "12pm", "6pm", "12pm")
+  ) +
+  geom_smooth(se = FALSE) +
+  viridis::scale_color_viridis(
+    name = "Location",
+    discrete = TRUE)
 ```
 
+    ## `summarise()` regrouping output by 'day' (override with `.groups` argument)
+
+    ## `geom_smooth()` using method = 'gam' and formula 'y ~ s(x, bs = "cs")'
+
 <img src="p8105_hw3_rsh2155_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+
+From the above plot, we can see that starting at around midnight every
+day, on average the individual was moving hardly at all which is to be
+expected because he is likely asleep. Some noteworthy spikes on the plot
+are on Sundays, activity was quite high between 9 am and noon, and on
+Fridays, activity was even higher between 8 pm and 10 pm. In general,
+all days have steadily increasing activity from 6 am to 10 am, at which
+point activity stabilizes before reducing around 9 pm.
 
 ## Problem 3
 
