--- a/p8105_hw3_rsh2155.md
+++ b/p8105_hw3_rsh2155.md
@@ -223,8 +223,13 @@ accel_df %>%
   ) +
   geom_smooth(se = FALSE) +
   viridis::scale_color_viridis(
-    name = "Location",
-    discrete = TRUE)
+    name = "Day",
+    discrete = TRUE) +
+  labs(
+    title = "Daily Activity Plot",
+    x = "Time of Day",
+    y = "Activity Level"
+    )
 ```
 
     ## `summarise()` regrouping output by 'day' (override with `.groups` argument)
@@ -245,13 +250,78 @@ point activity stabilizes before reducing around 9 pm.
 
 ``` r
 data("ny_noaa")
+
+ny_df = ny_noaa %>% 
+  mutate(
+    tmin = as.numeric(tmin), tmax = as.numeric(tmax)) %>% 
+  mutate(
+    tmin = tmin / 10,
+    tmax = tmax / 10)
+  
+
+ny_df %>% 
+  count(id)
 ```
 
-convert tenths of a degree C to degrees C snowfall commonly observed -
-count\! 2 panel plot: data manipulation steps, then plotting step.
-group\_by(station, year, month) and summarize(average max temp), filter
-for jan and july. Separate line for each station. Use faceting for two
-panel plot.
+    ## # A tibble: 747 x 2
+    ##    id              n
+    ##    <chr>       <int>
+    ##  1 US1NYAB0001  1157
+    ##  2 US1NYAB0006   852
+    ##  3 US1NYAB0010   822
+    ##  4 US1NYAB0016   214
+    ##  5 US1NYAB0017   459
+    ##  6 US1NYAB0021   365
+    ##  7 US1NYAB0022   273
+    ##  8 US1NYAB0023   365
+    ##  9 US1NYAB0025   215
+    ## 10 US1NYAL0002   549
+    ## # ... with 737 more rows
+
+This data set contains data, for each day and New York state weather
+station, on daily precipitation, max and min temperatures, and snow
+depth. There are 2595176 observations and 7 variables. Tmin and tmax are
+the minimum and maximum daily temperatures, respectively, in degrees C.
+Id provides the weather station ID for each station. Precipitation data
+is given in tenths of a mm, as well as daily snowfall (mm) and snow
+depth (mm). Missing data is a major concern with this data set; many of
+the rows of data only contain data on one of the precipitation and
+temperature variables.
+
+Further data cleaning:
+
+``` r
+ny_df = ny_df %>% 
+  separate(date, into = c("year", "month", "day"), sep = "[-]", convert = TRUE)
+
+ny_df %>% 
+  count(snow) %>% 
+  arrange(desc(n))
+```
+
+    ## # A tibble: 282 x 2
+    ##     snow       n
+    ##    <int>   <int>
+    ##  1     0 2008508
+    ##  2    NA  381221
+    ##  3    25   31022
+    ##  4    13   23095
+    ##  5    51   18274
+    ##  6    76   10173
+    ##  7     8    9962
+    ##  8     5    9748
+    ##  9    38    9197
+    ## 10     3    8790
+    ## # ... with 272 more rows
+
+The most commonly observed amounts of snowfall are 0 and NA. 0 is quite
+likely because during the summer and warmer parts of the spring and fall
+in NY state, there will mostly be no snow.
+
+snowfall commonly observed - count\! 2 panel plot: data manipulation
+steps, then plotting step. group\_by(station, year, month) and
+summarize(average max temp), filter for jan and july. Separate line for
+each station. Use faceting for two panel plot.
 
 Comment on global warming, are some stations always colder?
 
