Created average max temp plot for problem 3

--- a/p8105_hw3_rsh2155.md
+++ b/p8105_hw3_rsh2155.md
@@ -318,10 +318,30 @@ The most commonly observed amounts of snowfall are 0 and NA. 0 is quite
 likely because during the summer and warmer parts of the spring and fall
 in NY state, there will mostly be no snow.
 
-snowfall commonly observed - count\! 2 panel plot: data manipulation
-steps, then plotting step. group\_by(station, year, month) and
-summarize(average max temp), filter for jan and july. Separate line for
-each station. Use faceting for two panel plot.
+``` r
+month_names = c(`1` = "January", `7` = "July")
+
+
+ny_df %>% 
+  group_by(id, month, year) %>% 
+  filter(month %in% c(1,7)) %>% 
+  summarize(mean_tmax = mean(tmax, na.rm = TRUE)) %>%
+  na.omit() %>% 
+  ggplot(aes(x = year, y = mean_tmax, color = id)) +
+  geom_line(alpha = 0.5) +
+  geom_point() +
+  facet_grid(. ~ month, labeller = as_labeller(month_names)) +
+  theme(legend.position = "none", panel.spacing.x = unit(20, "pt")) +
+  labs(
+    title = "January and July Temperatures",
+    x = "Year",
+    y = "Mean Tmax"
+  )
+```
+
+    ## `summarise()` regrouping output by 'id', 'month' (override with `.groups` argument)
+
+<img src="p8105_hw3_rsh2155_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
 
 Comment on global warming, are some stations always colder?
 
